# python-project-lvl3

./: Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  python-package.yml
page_loader/: __init__.py  cli.py  loader.py  logging.py  main.py
page_loader/scripts/: run_page_loader.py
tests/: conftest.py  test_download.py
tests/fixtures/: page.html
tests/fixtures/assets/: style.css
