[tool.poetry]
name = "kotano-page-loader"
version = "0.1.0"
description = ""
authors = ["kotano <kot4no@gmail.com>"]

packages = [
    { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.main:main"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
