[tool.poetry]
name = "kotano-page-loader"
version = "0.4.0"
description = ""
authors = ["kotano <kot4no@gmail.com>"]

packages = [
    { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.run_page_loader:main"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
